--- a/package.json
+++ b/package.json
@@ -1,16 +1,52 @@
 {
-  "name": "@crispy/supabase-contract",
-  "version": "0.1.0",
-  "private": true,
+  "name": "@crispy-streaming/supabase-contract",
+  "version": "0.1.1",
+  "description": "Shared Supabase database contract and Zod validators for Crispy clients",
+  "license": "MIT",
   "type": "module",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "types": "./src/index.ts",
-      "import": "./src/index.ts"
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
     }
   },
+  "files": [
+    "dist"
+  ],
   "sideEffects": false,
-  "dependencies": {
+  "engines": {
+    "node": ">=18"
+  },
+  "scripts": {
+    "clean": "rm -rf dist",
+    "build": "npm run clean && tsc -p tsconfig.json",
+    "typecheck": "tsc -p tsconfig.json --noEmit",
+    "prepack": "npm run build"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aayushrautela/crispy-supabase-contract.git"
+  },
+  "bugs": {
+    "url": "https://github.com/aayushrautela/crispy-supabase-contract/issues"
+  },
+  "homepage": "https://github.com/aayushrautela/crispy-supabase-contract#readme",
+  "keywords": [
+    "supabase",
+    "contract",
+    "zod",
+    "types"
+  ],
+  "peerDependencies": {
+    "zod": "^3.25.76"
+  },
+  "devDependencies": {
+    "typescript": "^5.7.3",
     "zod": "^3.25.76"
   }
 }
