--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,5 +27,13 @@ jobs:
       - name: Install
         run: npm ci
 
+      - name: Use latest npm
+        run: npm install -g npm@latest
+
+      - name: Clear npm auth (OIDC only)
+        run: rm -f ~/.npmrc
+
       - name: Publish
+        env:
+          NODE_AUTH_TOKEN: ''
         run: npm publish --access public --provenance
